--- a/jade/index.jade
+++ b/jade/index.jade
@@ -9,5 +9,6 @@ html(lang="en")
     title("Olin.js")
 
     link(href="stylesheets/style.css", rel="stylesheet")
+    script(type="text/javascript", src="node_modules/lazy.js/lazy.min.js")
     script(type="text/javascript", src="node_modules/d3/d3.min.js")
     script(type="text/javascript", src="js/main.js")
