--- a/jade/index.jade
+++ b/jade/index.jade
@@ -10,5 +10,6 @@ html(lang="en")
 
     link(href="stylesheets/style.css", rel="stylesheet")
     script(type="text/javascript", src="node_modules/lazy.js/lazy.min.js")
-    script(type="text/javascript", src="node_modules/d3/d3.min.js")
+    script(type="text/javascript", src="node_modules/d3/d3.min.js")      
+    script(type="text/javascript", src="js/jquery.min.js")
     script(type="text/javascript", src="js/main.js")
