Better functions, weird mouseover

--- a/jade/index.jade
+++ b/jade/index.jade
@@ -11,4 +11,6 @@ html(lang="en")
     link(href="stylesheets/style.css", rel="stylesheet")
     script(type="text/javascript", src="node_modules/lazy.js/lazy.min.js")
     script(type="text/javascript", src="node_modules/d3/d3.min.js")      
+    script(type="text/javascript", src="node_modules/jquery/dist/jquery.min.js")
+
     script(type="text/javascript", src="js/main.js")
