--- a/jade/index.jade
+++ b/jade/index.jade
@@ -14,3 +14,11 @@ html(lang="en")
     script(type="text/javascript", src="node_modules/jquery/dist/jquery.min.js")
 
     script(type="text/javascript", src="js/main.js")
+
+  div#controls
+    input.NA
+    button.NA
+      | Submit
+    input.ND
+    button.ND
+      | Submit
