--- a/jade/index.jade
+++ b/jade/index.jade
@@ -14,6 +14,7 @@ html(lang="en")
     script(type="text/javascript", src="node_modules/jquery/dist/jquery.min.js")
 
     script(type="text/javascript", src="js/main.js")
+    //- script(type="text/javascript", src="js/test.js")
 
   div#controls
     input.NA
