--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -1,3 +1,6 @@
+#container {
+  position: relative;
+}
 .line {
   fill: none;
   stroke: #000;
@@ -25,5 +28,10 @@
 #overlay {
   position: absolute;
   top: 0;
-  z-index: -1000;
+  z-index: -1;
+}
+#overlay .line {
+  stroke-width: 2;
+  stroke-dasharray: 10, 5, 5, 5;
+  stroke: rgba(0,0,0,0.533);
 }
