--- a/jade/index.jade
+++ b/jade/index.jade
@@ -6,7 +6,7 @@ html(lang="en")
     meta(http-equiv="X-UA-Compatible", content="IE=edge")
     meta(name="viewport", content="width=device-width, initial-scale=1")
 
-    title("Olin.js")
+    title("Diode")
 
     link(href="stylesheets/style.css", rel="stylesheet")
     script(type="text/javascript", src="node_modules/lazy.js/lazy.min.js")
