--- a/jade/index.jade
+++ b/jade/index.jade
@@ -12,6 +12,7 @@ html(lang="en")
     script(type="text/javascript", src="node_modules/lazy.js/lazy.min.js")
     script(type="text/javascript", src="node_modules/d3/d3.min.js")      
 
+    script(type="text/javascript", src="js/poly.js")
     script(type="text/javascript", src="js/main.js")
 
   div#controls
