Range inputs for dopant concentrations!

--- a/jade/index.jade
+++ b/jade/index.jade
@@ -16,10 +16,10 @@ html(lang="en")
     script(type="text/javascript", src="js/main.js")
 
   div#controls
-    input(type=range).NA
-    button.NA
-      | Submit
-    input(type=range).ND
-    button.ND
+    //- input(type=range).NA
+    //- button.NA
+    //-   | Submit
+    //- input(type=range).ND
+    //- button.ND
       | Submit
   #container
