Fix overlay line/text interaction

--- a/stylus/style.styl
+++ b/stylus/style.styl
@@ -26,6 +26,9 @@ ndep =  complement(pdep)
         fill ndep
     .n
         fill ntype
+        
+.plot-title
+    font-family Sans-Serif
 
 #overlay
     position absolute
